chore(build): Specify java version, update CONTRIBUTING

--- a/build.gradle
+++ b/build.gradle
@@ -32,3 +32,9 @@ run {
 configurations {
     compile.exclude module: 'exercises'
 }
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
